force-app/main/default/objects/SalesOrg__c/SalesOrg__c.object-meta.xml
<CustomObject>
    
    <label>Organização de Vendas</label>
    <nameField>
        <label>Nome de Organização de Vendas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizações de Vendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>