force-app/main/default/objects/SalesOrg__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diretor Investida</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesOrgs</relationshipName>
    <type>Lookup</type>
</CustomField>