force-app/main/default/objects/SalesOrg__c/fields/ManagerDolarApprovalLimit__c.field-meta.xml
<CustomField>
    <fullName>ManagerDolarApprovalLimit__c</fullName>
    <label>Limite de Aprovação em $ do Gerente</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>