force-app/main/default/objects/SalesOrg__c/fields/ManagerPercentApprovalLimit__c.field-meta.xml
<CustomField>
    <fullName>ManagerPercentApprovalLimit__c</fullName>
    <description>Limite em porcentagem em que apenas o gerente da loja poderá aprovar o pedido.</description>
    <inlineHelpText>Limite em porcentagem em que apenas o gerente da loja poderá aprovar o pedido.</inlineHelpText>
    <label>Limite de Aprovação em % do Gerente</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>