force-app/main/default/objects/SalesOrg__c/fields/ManagerValueApprovalLimit__c.field-meta.xml
<CustomField>
    <fullName>ManagerValueApprovalLimit__c</fullName>
    <description>Limite em R$ a qual o gerente da filial poderá aprovar o pedido.</description>
    <inlineHelpText>Limite em R$ a qual o gerente da filial poderá aprovar o pedido.</inlineHelpText>
    <label>Limite de Aprovação em R$ do Gerente</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>