force-app/main/default/objects/SalesOrg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Director__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ManagerPercentApprovalLimit__c</columns>
    <columns>ManagerValueApprovalLimit__c</columns>
    <columns>ManagerDolarApprovalLimit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>